[package]
name = "ddbot-rs"
version = "0.1.0"
authors = ["aisuzuki"]
edition = "2024"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
serenity = { version = "0.12", features = ["cache", "framework", "rustls_backend"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
ureq = { version = "3.0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"

[lints.clippy]
